Agregando colores y estilos en el archivo styles.css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,7 +19,7 @@
                 <li><a class="nav__link" href="#">Sobre Mi</a></li>
                 <li><a class="nav__link">Habilidades</a></li>
             </ul>
-            <button class="btn nav__link">Contactame</button>
+            <button class="btn btn-secondary">Contactame</button>
         </nav>
     </header>
     <div class="app">
@@ -52,13 +54,17 @@
                             <th>Ubicacion: </th>
                             <td>Guayaquil, Ecuador</td>
                         </tr>
+                        <tr>
+                            <th>Icono: </th>
+                            <td>LinkedIn</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
             <div class="profile__social-media">
                 <h3>Redes Sociales</h3>
                 <div class="social-medias">
-                    
+
                 </div>
             </div>
             <div class="profile__form">
@@ -73,30 +79,53 @@
             </div>
         </div>
 
-        <div class="content">
-            <section>
-                <article>
-                    <h3>Resumen</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem reprehenderit repellendus recusandae porro numquam delectus nostrum inventore molestias sunt fugit earum, molestiae deleniti tempore nesciunt excepturi obcaecati placeat doloremque tempora!</p>
-                </article>
-                <article>
-                    <h3>Educacion</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi molestias nulla voluptatem dolore. Eaque totam explicabo quam corporis repellendus, velit rem, laboriosam at assumenda quia qui itaque nesciunt! Explicabo, cupiditate!</p>
-                </article>
-                <article>
-                    <h3>Experiencia</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non assumenda tenetur nihil blanditiis, laborum corrupti odio. Hic facere vel ipsam, dolor corporis quasi! Sequi quae officia, atque cum praesentium beatae?</p>
-                </article>
-                <article>
-                    <h3>Habilidades</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, hic asperiores. Est veritatis praesentium nemo quas cum, suscipit ipsam eaque dolore hic dolorem cupiditate totam! Nisi cumque omnis quas quibusdam.</p>
-                </article>
-            </section>
-        </div>
+        <section class="content">
+            <article>
+                <h2>Resumen</h2>
+                <p>Aprender nuevas tecnologías para resolver nuevos problemas y brindar soluciones de la 
+                    manera más eficiente posible, como rápida. Con entusiasmo y dedicacion se puede atravesar fronteras.
+                </p>
+            </article>
+            <article>
+                <h2>Educacion</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi molestias nulla voluptatem dolore.
+                    Eaque totam explicabo quam corporis repellendus, velit rem, laboriosam at assumenda quia qui itaque
+                    nesciunt! Explicabo, cupiditate!
+                </p>
+            </article>
+            <article>
+                <h2>Experiencia</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non assumenda tenetur nihil blanditiis,
+                    laborum corrupti odio. Hic facere vel ipsam, dolor corporis quasi! Sequi quae officia, atque cum
+                    praesentium beatae?
+                </p>
+            </article>
+            <article>
+                <h2>Habilidades</h2>
+                <span class="skills">
+                    <span class="btn">Flask</span>
+                    <span class="btn">FastAPI</span>
+                    <span class="btn">Django</span>
+                    <span class="btn">ExpressJS</span>
+                    <span class="btn">VueJS</span>
+                    <span class="btn">ReactJS</span>
+                    <span class="btn">Git</span>
+                    <span class="btn">GitHub</span>
+                    <span class="btn">GitLab</span>
+                    <span class="btn">Linux SysAdmin</span>
+                    <span class="btn">Docker</span>
+                    <span class="btn">MySQL</span>
+                    <span class="btn">PostgreSQL</span>
+                </span>
+            </article>
+        </section>
+
+    </div>
 
     </div>
     <footer>
-        <p>  Todos los derechos reservados</p>
+        <p> Todos los derechos reservados</p>
     </footer>
 </body>
+
 </html>
