--- a/index.html
+++ b/index.html
@@ -1,131 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <script
+      src="https://kit.fontawesome.com/c70e39eba0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-</head>
-
-<body>
-    <header>
-        <nav>
-            <h3>Anthony Terreros</h3>
-            <ul>
-                <li><a class="nav__link" href="#">Inicio</a></li>
-                <li><a class="nav__link" href="#">Sobre Mi</a></li>
-                <li><a class="nav__link">Habilidades</a></li>
-            </ul>
-            <button class="btn btn-secondary">Contactame</button>
-        </nav>
-    </header>
+  <body>
     <div class="app">
-        <div class="profile">
-            <img src="" alt="Foto de Perfil">
-            <div class="profile__name">
-                <h3>David Terreros</h3>
-                <span>Backend Developer</span>
-            </div>
-            <div class="profile__contacts">
-                <!-- <h3>Contactos</h3> -->
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Contactos</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>Correo: </th>
-                            <td>danterreros21@gmail.com</td>
-                        </tr>
-                        <tr>
-                            <th>Telefono: </th>
-                            <td>+ 593 233 233 2333</td>
-                        </tr>
-                        <tr>
-                            <th>Direccion: </th>
-                            <td>Portete</td>
-                        </tr>
-                        <tr>
-                            <th>Ubicacion: </th>
-                            <td>Guayaquil, Ecuador</td>
-                        </tr>
-                        <tr>
-                            <th>Icono: </th>
-                            <td>LinkedIn</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="profile__social-media">
-                <h3>Redes Sociales</h3>
-                <div class="social-medias">
-
-                </div>
-            </div>
-            <div class="profile__form">
-                <h3>Contactame</h3>
-                <form id="contact">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" required>
-                    <label for="message">Mensaje: </label>
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                </form>
-                <button>Enviar</button>
-            </div>
+      <header>
+        <nav>
+          <h1>Anthony Terreros</h1>
+          <ul>
+            <li><a class="nav__link" href="#">Inicio</a></li>
+            <li><a class="nav__link" href="#sobremi">Sobre Mi</a></li>
+            <li><a class="nav__link" href="skills">Habilidades</a></li>
+          </ul>
+          <button class="btn btn-secondary">Contactame</button>
+        </nav>
+      </header>
+      <aside class="profile">
+        <img src="" alt="Foto de Perfil" />
+        <div class="profile__name">
+          <h2>David Terreros</h2>
+          <span>Backend Developer</span>
+        </div>
+        <div class="profile__contacts">
+          <h3>Contactos</h3>
+          <table>
+            <tbody>
+              <tr>
+                <th><i class="fa-solid fa-briefcase"></i></th>
+                <td>danterreros21@gmail.com</td>
+              </tr>
+              <tr>
+                <th><i class="fa-solid fa-phone"></i></th>
+                <td>+ 593 233 233 2333</td>
+              </tr>
+              <tr>
+                <th><i class="fa-solid fa-location-crosshairs"></i></th>
+                <td>Portete</td>
+              </tr>
+              <tr>
+                <th><i class="fa-solid fa-location-dot"></i></th>
+                <td>Guayaquil, Ecuador</td>
+              </tr>
+              <tr>
+                <th><i class="fa-brands fa-linkedin-in"></i></th>
+                <td>LinkedIn</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="profile__social-media">
+          <h3>Redes Sociales</h3>
+          <div class="social-medias">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-telegram"></i>
+            <i class="fa-brands fa-google"></i>
+            <i class="fa-brands fa-gitlab"></i>
+          </div>
         </div>
 
-        <section class="content">
-            <article>
-                <h2>Resumen</h2>
-                <p>Aprender nuevas tecnologías para resolver nuevos problemas y brindar soluciones de la 
-                    manera más eficiente posible, como rápida. Con entusiasmo y dedicacion se puede atravesar fronteras.
-                </p>
-            </article>
-            <article>
-                <h2>Educacion</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi molestias nulla voluptatem dolore.
-                    Eaque totam explicabo quam corporis repellendus, velit rem, laboriosam at assumenda quia qui itaque
-                    nesciunt! Explicabo, cupiditate!
-                </p>
-            </article>
-            <article>
-                <h2>Experiencia</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non assumenda tenetur nihil blanditiis,
-                    laborum corrupti odio. Hic facere vel ipsam, dolor corporis quasi! Sequi quae officia, atque cum
-                    praesentium beatae?
-                </p>
-            </article>
-            <article>
-                <h2>Habilidades</h2>
-                <span class="skills">
-                    <span class="btn">Flask</span>
-                    <span class="btn">FastAPI</span>
-                    <span class="btn">Django</span>
-                    <span class="btn">ExpressJS</span>
-                    <span class="btn">VueJS</span>
-                    <span class="btn">ReactJS</span>
-                    <span class="btn">Git</span>
-                    <span class="btn">GitHub</span>
-                    <span class="btn">GitLab</span>
-                    <span class="btn">Linux SysAdmin</span>
-                    <span class="btn">Docker</span>
-                    <span class="btn">MySQL</span>
-                    <span class="btn">PostgreSQL</span>
-                </span>
-            </article>
-        </section>
+        <div class="profile__form">
+          <h3>Contactame</h3>
+          <form>
+            <label for="email">Email: </label>
+            <input type="email" name="email" id="email" required />
+            <label for="message">Mensaje: </label>
+            <textarea name="message" id="message"> </textarea>
+            <button class="btn btn-send">Enviar</button>
+          </form>
+        </div>
+      </aside>
 
+      <section class="content">
+        <article>
+          <h2>Resumen</h2>
+          <span>Aprender nuevas tecnologías para resolver nuevos problemas y brindar soluciones de la 
+            manera más eficiente posible, como rápida. Con entusiasmo y dedicacion se puede atravesar fronteras.</span>
+        </article>
+        <article>
+          <h2>Educación</h2>
+          <div class="info">
+            <h3>Bachillerato en Administración de Sistemas</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-building"></i>
+                <span>Academia Naval Almirante Illingworth</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-calendar"></i>
+                <span>Graduado en 2019</span>
+              </li>
+            </ul>
+          </div>
+          <div class="info">
+            <h3>Ingeniería en Ciencias de la Computación</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-building"></i>
+                <span>Escuela Superior Politécnica del Litoral</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-id-card"></i>
+                <span>Estudiante</span>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <h2>Experiencia</h2>
+          <div class="info">
+            <h3>Desarrollador Web Junior</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-building"></i>
+                <span>Grupo Grope</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-calendar"></i>
+                <span>Pasante durante 2 meses.</span>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <h2>Habilidades</h2>
+          <div class="skills">
+            <span class="btn">Flask</span>
+            <span class="btn">FastAPI</span>
+            <span class="btn">Django</span>
+            <span class="btn">ExpressJS</span>
+            <span class="btn">VueJS</span>
+            <span class="btn">ReactJS</span>
+            <span class="btn">Git</span>
+            <span class="btn">GitHub</span>
+            <span class="btn">GitLab</span>
+            <span class="btn">Linux SysAdmin</span>
+            <span class="btn">Docker</span>
+            <span class="btn">MySQL</span>
+            <span class="btn">PostgreSQL</span>
+          </div>
+        </article>
+        <article id="#sobremi">
+            <h2>Sobre Mi</h2>
+            <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video>
+        </article>
+        <article>
+            <h2>Ubicacion</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec" width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+      </section>
+
+      <footer>
+        <a href="https://github.com/AnthonyTerreros" target="_blank">
+          <i class="fa-brands fa-github-square"></i>
+        </a>
+        <p>(c) Todos los derechos reservados</p>
+      </footer>
     </div>
-
-    </div>
-    <footer>
-        <p> Todos los derechos reservados</p>
-    </footer>
-</body>
-
+  </body>
 </html>
