--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <nav>
           <h1>Anthony Terreros</h1>
           <ul>
-            <li><a class="nav__link" href="#">Inicio</a></li>
-            <li><a class="nav__link" href="#sobremi">Sobre Mi</a></li>
-            <li><a class="nav__link" href="skills">Habilidades</a></li>
+            <li><a class="nav__link" href="#">INICIO</a></li>
+            <li><a class="nav__link" href="#sobremi">SOBRE MI</a></li>
+            <li><a class="nav__link" href="skills">HABILIDADES</a></li>
           </ul>
           <button class="btn btn-secondary">Contactame</button>
         </nav>
       </header>
       <aside class="profile">
-        <img src="" alt="Foto de Perfil" />
+        <img src="img/foto1.jpeg" alt="Foto de Perfil" />
         <div class="profile__name">
           <h2>David Terreros</h2>
           <span>Backend Developer</span>
@@ -149,13 +149,13 @@
             <span class="btn">PostgreSQL</span>
           </div>
         </article>
-        <article id="#sobremi">
-            <h2>Sobre Mi</h2>
-            <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video>
-        </article>
         <article>
+            <h2>Sobre Mi</h2>
+            <!-- <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video> -->
+        </article>
+        <article >
             <h2>Ubicacion</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec" width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="file_media" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
       </section>
 
