Cambios en el archivo .css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <h1>Anthony Terreros</h1>
           <ul>
             <li><a class="nav__link" href="#">INICIO</a></li>
-            <li><a class="nav__link" href="#sobremi">SOBRE MI</a></li>
-            <li><a class="nav__link" href="skills">HABILIDADES</a></li>
+            <li><a class="nav__link" href="#">SOBRE MI</a></li>
+            <li><a class="nav__link" href="#">HABILIDADES</a></li>
           </ul>
           <button class="btn btn-secondary">Contactame</button>
         </nav>
@@ -61,10 +61,22 @@
         <div class="profile__social-media">
           <h3>Redes Sociales</h3>
           <div class="social-medias">
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-telegram"></i>
-            <i class="fa-brands fa-google"></i>
-            <i class="fa-brands fa-gitlab"></i>
+            <a href="https://github.com/AnthonyTerreros">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-telegram"></i>
+            </a>
+            
+            <a href="">
+              <i class="fa-brands fa-google"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-gitlab"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
           </div>
         </div>
 
