--- a/index.html
+++ b/index.html
@@ -26,77 +26,82 @@
         </nav>
       </header>
       <aside class="profile">
-        <img src="img/foto1.jpeg" alt="Foto de Perfil" />
-        <div class="profile__name">
-          <h2>David Terreros</h2>
-          <span>Backend Developer</span>
-        </div>
-        <div class="profile__contacts">
-          <h3>Contactos</h3>
-          <table>
-            <tbody>
-              <tr>
-                <th><i class="fa-solid fa-briefcase"></i></th>
-                <td>danterreros21@gmail.com</td>
-              </tr>
-              <tr>
-                <th><i class="fa-solid fa-phone"></i></th>
-                <td>+ 593 233 233 2333</td>
-              </tr>
-              <tr>
-                <th><i class="fa-solid fa-location-crosshairs"></i></th>
-                <td>Portete</td>
-              </tr>
-              <tr>
-                <th><i class="fa-solid fa-location-dot"></i></th>
-                <td>Guayaquil, Ecuador</td>
-              </tr>
-              <tr>
-                <th><i class="fa-brands fa-linkedin-in"></i></th>
-                <td>LinkedIn</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="profile__social-media">
-          <h3>Redes Sociales</h3>
-          <div class="social-medias">
-            <a href="https://github.com/AnthonyTerreros">
-              <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-telegram"></i>
-            </a>
-            
-            <a href="">
-              <i class="fa-brands fa-google"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-gitlab"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-linkedin"></i>
-            </a>
+        <div class="profile__info">
+          <img src="img/foto1.jpeg" alt="Foto de Perfil" />
+          <div class="profile__name">
+            <h2>David Terreros</h2>
+            <span>Backend Developer</span>
           </div>
-        </div>
+          <div class="profile__contacts">
+            <h3>Contactos</h3>
+            <table>
+              <tbody>
+                <tr>
+                  <th><i class="fa-solid fa-briefcase"></i></th>
+                  <td>danterreros21@gmail.com</td>
+                </tr>
+                <tr>
+                  <th><i class="fa-solid fa-phone"></i></th>
+                  <td>+ 593 233 233 2333</td>
+                </tr>
+                <tr>
+                  <th><i class="fa-solid fa-location-crosshairs"></i></th>
+                  <td>Portete</td>
+                </tr>
+                <tr>
+                  <th><i class="fa-solid fa-location-dot"></i></th>
+                  <td>Guayaquil, Ecuador</td>
+                </tr>
+                <tr>
+                  <th><i class="fa-brands fa-linkedin-in"></i></th>
+                  <td>LinkedIn</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="profile__social-media">
+            <h3>Redes Sociales</h3>
+            <div class="social-medias">
+              <a href="https://github.com/AnthonyTerreros">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-telegram"></i>
+              </a>
 
-        <div class="profile__form">
-          <h3>Contactame</h3>
-          <form>
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email" required />
-            <label for="message">Mensaje: </label>
-            <textarea name="message" id="message"> </textarea>
-            <button class="btn btn-send">Enviar</button>
-          </form>
+              <a href="">
+                <i class="fa-brands fa-google"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-gitlab"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="profile__form">
+            <h3>Contactame</h3>
+            <form>
+              <label for="email">Email: </label>
+              <input type="email" name="email" id="email" required />
+              <label for="message">Mensaje: </label>
+              <textarea name="message" id="message"> </textarea>
+              <button class="btn btn-send">Enviar</button>
+            </form>
+          </div>
         </div>
       </aside>
 
       <section class="content">
         <article>
           <h2>Resumen</h2>
-          <span>Aprender nuevas tecnologías para resolver nuevos problemas y brindar soluciones de la 
-            manera más eficiente posible, como rápida. Con entusiasmo y dedicacion se puede atravesar fronteras.</span>
+          <span
+            >Aprender nuevas tecnologías para resolver nuevos problemas y
+            brindar soluciones de la manera más eficiente posible, como rápida.
+            Con entusiasmo y dedicacion se puede atravesar fronteras.</span
+          >
         </article>
         <article>
           <h2>Educación</h2>
@@ -162,12 +167,19 @@
           </div>
         </article>
         <article>
-            <h2>Sobre Mi</h2>
-            <!-- <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video> -->
+          <h2>Sobre Mi</h2>
+          <!-- <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video> -->
         </article>
-        <article >
-            <h2>Ubicacion</h2>
-            <iframe id="file_media" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <article>
+          <h2>Ubicacion</h2>
+          <iframe
+            id="file_media"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </article>
       </section>
 
