Coreccion de Bug con el AsideBar que se salio del area aside

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <button class="btn btn-secondary">Contactame</button>
         </nav>
       </header>
-      <aside class="profile">
-        <div class="profile__info">
+      <aside>
+        <div class="profile">
           <img src="img/foto1.jpeg" alt="Foto de Perfil" />
           <div class="profile__name">
             <h2>David Terreros</h2>
@@ -168,7 +168,16 @@
         </article>
         <article>
           <h2>Sobre Mi</h2>
-          <!-- <video src="https://www.youtube.com/watch?v=b0ZXctcZVNQ" width="560" height="315" controls></video> -->
+          <iframe
+            id="file_media"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/hT_nvWreIhg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </article>
         <article>
           <h2>Ubicacion</h2>
