Cambios en el archivo html

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
             <span class="btn">Linux SysAdmin</span>
             <span class="btn">Docker</span>
             <span class="btn">MySQL</span>
+            <span class="btn">Redis</span>
+            <span class="btn">MongoDB</span>
             <span class="btn">PostgreSQL</span>
           </div>
         </article>
@@ -170,8 +172,6 @@
           <h2>Sobre Mi</h2>
           <iframe
             id="file_media"
-            width="560"
-            height="315"
             src="https://www.youtube.com/embed/hT_nvWreIhg"
             title="YouTube video player"
             frameborder="0"
