Actualizando los enlances a con informacion

--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
           <div class="profile__social-media">
             <h3>Redes Sociales</h3>
             <div class="social-medias">
-              <a href="https://github.com/AnthonyTerreros">
+              <a href="https://github.com/AnthonyTerreros" target="_blank">
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="">
+              <a href="https://t.me/antozzzz456" target="_blank">
                 <i class="fa-brands fa-telegram"></i>
               </a>
 
-              <a href="">
+              <a href="mailto:anthonyterreros21@gmail.com?Subject=Interesado%20en%20contactarte" target="_blank">
                 <i class="fa-brands fa-google"></i>
               </a>
-              <a href="">
+              <a href="https://gitlab.com/anthonyterreros21" target="_blank">
                 <i class="fa-brands fa-gitlab"></i>
               </a>
-              <a href="">
+              <a href="https://www.linkedin.com/in/david-terreros-gurumendi-692627225/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
               </a>
             </div>
