--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Anthony Terreros</title>
     <script
       src="https://kit.fontawesome.com/c70e39eba0.js"
       crossorigin="anonymous"
@@ -16,13 +16,23 @@
     <div class="app">
       <header>
         <nav>
-          <h1>Anthony Terreros</h1>
-          <ul>
+          <a href="https://github.com/AnthonyTerreros/proyecto01_portafolio" class="logo toogle" target="_blank">
+            Anthony Terreros
+          </a>
+          <button class="nav__toogle">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFFFFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <line x1="4" y1="6" x2="20" y2="6" />
+              <line x1="4" y1="12" x2="20" y2="12" />
+              <line x1="4" y1="18" x2="20" y2="18" />
+            </svg>
+          </button>
+          <ul class="nav__menu">
             <li><a class="nav__link" href="#">INICIO</a></li>
             <li><a class="nav__link" href="#">SOBRE MI</a></li>
             <li><a class="nav__link" href="#">HABILIDADES</a></li>
           </ul>
-          <button class="btn btn-secondary">Contactame</button>
+          <a class="hiddena btn btn-secondary" href="https://t.me/antozzzz456" target="_blank">Contactame</a>
         </nav>
       </header>
       <aside>
