--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             </svg>
           </button>
           <ul class="nav__menu">
-            <li><a class="nav__link" href="#">INICIO</a></li>
-            <li><a class="nav__link" href="#">SOBRE MI</a></li>
-            <li><a class="nav__link" href="#">HABILIDADES</a></li>
+            <li><a class="nav__link" href="#inicio">INICIO</a></li>
+            <li><a class="nav__link" href="#sobremi">SOBRE MI</a></li>
+            <li><a class="nav__link" href="#habilidades">HABILIDADES</a></li>
           </ul>
           <a class="hiddena btn btn-secondary" href="https://t.me/antozzzz456" target="_blank">Contactame</a>
         </nav>
       </header>
       <aside>
         <div class="profile">
-          <img src="img/foto1.jpeg" alt="Foto de Perfil" />
+          <img src="img/foto_perfil.png" alt="Foto de Perfil" />
           <div class="profile__name">
             <h2>David Terreros</h2>
             <span>Backend Developer</span>
@@ -105,7 +105,7 @@
       </aside>
 
       <section class="content">
-        <article>
+        <article id="inicio">
           <h2>Resumen</h2>
           <span
             >Aprender nuevas tecnologías para resolver nuevos problemas y
@@ -158,7 +158,7 @@
             </ul>
           </div>
         </article>
-        <article>
+        <article id="habilidades">
           <h2>Habilidades</h2>
           <div class="skills">
             <span class="btn">Flask</span>
@@ -178,7 +178,7 @@
             <span class="btn">PostgreSQL</span>
           </div>
         </article>
-        <article>
+        <article id="sobremi">
           <h2>Sobre Mi</h2>
           <iframe
             id="file_media"
@@ -186,7 +186,6 @@
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
           ></iframe>
         </article>
         <article>
@@ -195,7 +194,6 @@
             id="file_media"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec"
             style="border: 0"
-            allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
