Mejoras en el Footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anthony Terreros</title>
+    <title>David Terreros</title>
     <script
       src="https://kit.fontawesome.com/c70e39eba0.js"
       crossorigin="anonymous"
@@ -17,7 +17,7 @@
       <header>
         <nav>
           <a href="https://github.com/AnthonyTerreros/proyecto01_portafolio" class="logo toogle" target="_blank">
-            Anthony Terreros
+            David <span>Terreros</span>
           </a>
           <button class="nav__toogle">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFFFFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -189,7 +189,7 @@
           ></iframe>
         </article>
         <article>
-          <h2>Ubicacion</h2>
+          <h2>Ubicación</h2>
           <iframe
             id="file_media"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8829288022116!2d-79.93174036047422!3d-2.19796473191458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d71e4b4a5af73%3A0xf30e47b4355e1fdd!2sPortete%20Y%20La%2029!5e0!3m2!1ses!2sec!4v1654382089674!5m2!1ses!2sec"
@@ -201,10 +201,71 @@
       </section>
 
       <footer>
-        <a href="https://github.com/AnthonyTerreros" target="_blank">
-          <i class="fa-brands fa-github-square"></i>
-        </a>
-        <p>(c) Todos los derechos reservados</p>
+        <div class="footer-izquierda">
+          <h3>David <span>Terreros</span></h3>
+          <p class="footer-links">
+            <a href="#inicio">Inicio</a> |
+            <a href="#sobremi">Sobre Mi</a> |
+            <a href="#habilidades">Habilidades</a>
+          </p>
+          <p class="footer-nombre">
+            David Terreros © 2022
+          </p>
+        </div>
+        <div class="footer-centro">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <circle cx="12" cy="11" r="3" />
+              <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+            </svg>
+            <p><span>38</span> y Portete</p>
+          </div>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+              <path d="M15 7a2 2 0 0 1 2 2" />
+              <path d="M15 3a6 6 0 0 1 6 6" />
+            </svg>
+            <p>+593 2340 323 234</p>
+          </div>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <rect x="3" y="5" width="18" height="14" rx="2" />
+              <polyline points="3 7 12 13 21 7" />
+            </svg class="correo">
+            <p><a href="mailto:anthonyterreros21@gmail.com">anthonyterreros21@gmail.com</a></p>
+          </div>
+        </div>
+        <div class="footer-derecha">
+          <p class="footer-nombre-acerca">
+            <span>David Terreros</span>
+            Aprender nuevas tecnologías para resolver nuevos problemas y brindar soluciones de la manera más eficiente posible, como rápida. Con entusiasmo y dedicacion se puede atravesar fronteras.
+          </p>
+  
+          <div class="footer-icons">
+            <a href="" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+              </svg>
+            </a>
+            <a href="https://t.me/antozzzz456" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-telegram" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4" />
+              </svg>
+            </a>
+            <a href="https://gitlab.com/anthonyterreros21" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-gitlab" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M21 14l-9 7l-9 -7l3 -11l3 7h6l3 -7z" />
+              </svg>
+            </a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
