Aplicando D. Responsive en el Footer

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         <div class="footer-izquierda">
           <h3>David <span>Terreros</span></h3>
           <p class="footer-links">
-            <a href="#inicio">Inicio</a> |
-            <a href="#sobremi">Sobre Mi</a> |
+            <a href="#inicio" class="link-1">Inicio</a>
+            <a href="#sobremi">Sobre Mi</a>
             <a href="#habilidades">Habilidades</a>
           </p>
           <p class="footer-nombre">
