--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="app">
       <header>
         <nav>
-          <a href="https://github.com/AnthonyTerreros/proyecto01_portafolio" class="logo toogle" target="_blank">
-            David <span>Terreros</span>
-          </a>
-          <button class="nav__toogle">
+          <div class="nombre-box">
+            <a href="https://github.com/AnthonyTerreros/proyecto01_portafolio" class="logo toogle" target="_blank">
+              David <span>Terreros</span>
+            </a>
+          </div>
+          <button class="nav__toogle" aria-label="Abrir menu">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFFFFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
               <line x1="4" y1="6" x2="20" y2="6" />
@@ -268,5 +270,6 @@
         </div>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
