--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
       <aside>
         <div class="profile">
-          <img src="img/foto_perfil.png" alt="Foto de Perfil" />
+          <img src="assets/foto_perfil.png" alt="Foto de Perfil" />
           <div class="profile__name">
             <h2>David Terreros</h2>
             <span>Backend Developer</span>
