--- a/index.html
+++ b/index.html
@@ -182,13 +182,7 @@
         </article>
         <article id="sobremi">
           <h2>Sobre Mi</h2>
-          <iframe
-            id="file_media"
-            src="https://www.youtube.com/embed/hT_nvWreIhg"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          ></iframe>
+          <audio src="assets/audio_sobremi.mp4" controls></audio>
         </article>
         <article>
           <h2>Ubicación</h2>
