--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -9,10 +9,10 @@
   <!-- Tailwind is included -->
   <link rel="stylesheet" href="css/main.css?v=1628755089081">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"/>
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00b4b6"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png"/>
+  <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#00b4b6"/>
 
   <meta name="description" content="Admin One - free Tailwind dashboard">
 
@@ -201,7 +201,7 @@
                 0
               </h1>
             </div>
-            <span class="icon widget-icon text-blue-500"><i class="mdi mdi-cart-outline mdi-48px"></i></span>
+            <span class="icon widget-icon text-blue-500"><i class="mdi mdi-book mdi-48px"></i></span>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
                 0
               </h1>
             </div>
-            <span class="icon widget-icon text-red-500"><i class="mdi mdi-finance mdi-48px"></i></span>
+            <span class="icon widget-icon text-red-500"><i class="mdi mdi-animation-play mdi-48px"></i></span>
           </div>
         </div>
       </div>
