--- a/proyecto2/stadistics.html
+++ b/proyecto2/stadistics.html
@@ -32,35 +32,7 @@
   <meta property="twitter:image:width" content="1920">
   <meta property="twitter:image:height" content="960">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-          }
-        },
-        screens: {
-      '2xl': {'max': '1535px'},
-      // => @media (max-width: 1535px) { ... }
-
-      'xl': {'max': '1279px'},
-      // => @media (max-width: 1279px) { ... }
-
-      'lg': {'max': '1023px'},
-      // => @media (max-width: 1023px) { ... }
-
-      'md': {'max': '767px'},
-      // => @media (max-width: 767px) { ... }
-
-      'sm': {'max': '639px'},
-      // => @media (max-width: 639px) { ... }
-    }
-      }
-    }
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 <body>
@@ -190,7 +162,7 @@
   <div class="flex flex-col md:flex-row items-center justify-between space-y-6 md:space-y-0">
     <ul>
       <li>Admin</li>
-      <li>Categorias</li>
+      <li>Estadísticas</li>
     </ul>
   </div>
 </section>
@@ -198,22 +170,109 @@
 <section class="is-hero-bar">
   <div class="flex flex-col md:flex-row items-center justify-between space-y-6 md:space-y-0">
     <h1 class="title">
-      Categorias
+      Estadísticas
     </h1>
   </div>
 </section>
 
   <section class="section main-section">
-    <label for="selector_anime" class="block mb-2 text-2xl font-medium text-center dark:text-gray-400">Selecciona una Categoria de Anime</label>
-    <select id="selector_anime" class="block p-2 mb-6 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
-      <option selected>Selecciona una categoria</option>
-    </select>
-    <h1 class="mt-4 text-center text-2xl font-bold mb-4">Resultados</h1>
-    <p id="message_data" class="mt-5 mb-5"></p>
-    <div id="container_data" class="container grid grid-cols-3 justify-center gap-1 mx-auto md:grid-cols-2 sm:grid-cols-1">
+    <div class="card mb-6">
+      <header class="card-header">
+        <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-chart-timeline"></i></span>
+          Popularidad de los 10 Mejores Animes
+        </p>
+      </header>
+      <div class="card-content">
+        <div class="chart-area">
+          <div class="h-full">
+            <div class="chartjs-size-monitor">
+              <div class="chartjs-size-monitor-expand">
+                <div></div>
+              </div>
+              <div class="chartjs-size-monitor-shrink">
+                <div></div>
+              </div>
+            </div>
+            <canvas id="mychart1" class="chartjs-render-monitor block h-72" height="100px"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="card mb-6">
+      <header class="card-header">
+        <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-chart-donut"></i></span>
+          Número de Episodios de los 7 Mejores Animes
+        </p>
+      </header>
+      <div class="card-content">
+        <div class="chart-area">
+          <div class="h-full">
+            <div class="chartjs-size-monitor">
+              <div class="chartjs-size-monitor-expand">
+                <div></div>
+              </div>
+              <div class="chartjs-size-monitor-shrink">
+                <div></div>
+              </div>
+            </div>
+            <canvas id="mychart2" class="chartjs-render-monitor block h-72" style="position: relative; height:40vh; width:80vw"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-6">
+      <header class="card-header">
+        <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-finance"></i></span>
+          Número de Espectadores Por Anime del Top 7
+        </p>
+      </header>
+      <div class="card-content">
+        <div class="chart-area">
+          <div class="h-full">
+            <div class="chartjs-size-monitor">
+              <div class="chartjs-size-monitor-expand">
+                <div></div>
+              </div>
+              <div class="chartjs-size-monitor-shrink">
+                <div></div>
+              </div>
+            </div>
+            <canvas id="mychart3" class="chartjs-render-monitor block"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-6">
+      <header class="card-header">
+        <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-chart-arc"></i></span>
+          Número de Productores de Cada Anime del Top 5
+        </p>
+      </header>
+      <div class="card-content">
+        <div class="chart-area">
+          <div class="h-46">
+            <div class="chartjs-size-monitor">
+              <div class="chartjs-size-monitor-expand">
+                <div></div>
+              </div>
+              <div class="chartjs-size-monitor-shrink">
+                <div></div>
+              </div>
+            </div>
+            <canvas id="mychart4" class="chartjs-render-monitor block h-96"></canvas>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
 
   <footer class="footer">
     <div class="flex flex-col md:flex-row items-center justify-between space-y-3 md:space-y-0">
@@ -221,7 +280,6 @@
         <div>
           © 2022, MyAnimeDashBoard
         </div>
-  
         <div>
           <p><span class="text-bolder">Referencias: (</span> Distributed By: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>)</p>
         </div>
@@ -271,7 +329,7 @@
 <!-- Scripts below are for demo only -->
 <script type="text/javascript" src="js/main.min.js?v=1628755089081"></script>
 
-<script src="../scripts/category.js"></script>
+<script src="../scripts/stadistics.js"></script>
 <!-- Icons below are for demo only. Feel free to use any icon pack. Docs: https://bulma.io/documentation/elements/icon/ -->
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.9.95/css/materialdesignicons.min.css">
 
